tests/NormalTests/paczka1/fuzzy1/36319592.err
Error in line 9: ddSn S206 24,1
Error in line 11: A885 A401 24,8
Error in line 18: A885 A885 71,46
Error in line 19: dHMp2tg7eS A401 -5,5
Error in line 16: dHMp2tg7eS A401 89,4
Error in line 20: dHMp2tg7eS A885 7,0
Error in line 13: A885 A645 29,8
Error in line 24: dHMp2tg7eS S206 8,9
